<resources>
    <string name="app_name">Movie Booth</string>
    <string name="register_movie_btn_text">Register Movie</string>
    <string name="display_movies_btn_text">Display Movies</string>
    <string name="favourites_btn_text">Favourites</string>
    <string name="edit_movies_btn_text">Edit Movies</string>
    <string name="search_btn_text">Search</string>
    <string name="ratings_btn_text">Ratings</string>
    <string name="required_error_message">Required*</string>
    <string name="class_not_found_message">Cannot find %s class</string>
    <string name="future_year_error_message">Has provided a future year</string>
    <string name="year_before_1895_error_message">Should be a year after 1895</string>
    <string name="out_of_range_no_error_message">Should be a number between 1 – 10</string>
    <string name="registered_movie_message">Successfully registered the movie</string>
    <string name="already_registered_movie_message">Movie has already registered</string>
    <string name="register_movie_text">Keep records about movies you watched !\nInsert the details of the movie you want to register</string>
    <string name="required_fields_text">All fields are required</string>
    <string name="movie_title_hint">Movie Title</string>
    <string name="released_year_hint">Released Year</string>
    <string name="director_hint">Director</string>
    <string name="cast_hint">Cast</string>
    <string name="rating_hint">Rating</string>
    <string name="review_hint">Review</string>
    <string name="save_btn_text">Save</string>
    <string name="display_movies_text">Here are the details of all the movies you have registered so far</string>
    <string name="no_saved_movies_message">No saved movies yet</string>
    <string name="added_to_favourites_message">Added to favourites</string>
    <string name="add_to_favourites_btn_text">Add to Favourites</string>
    <string name="favourites_text">Here\'s the list of your favourite movies</string>
    <string name="no_favourite_movies_message">No favourite movies yet</string>
    <string name="saved_favourites_message">Saved favourites</string>
    <string name="edit_movies_text">Here\'s the complete list of movies you have watched\nSelect the movie you want to edit details</string>
    <string name="update_movie_details_text">Change the details of the movie you want to update</string>
    <string name="update_btn_text">Update</string>
    <string name="updated_movie_details_message">Successfully updated movie details</string>
    <string name="float_parsing_exception_message">Exception occurred while trying to parse rating number</string>
    <string name="rating_required_message">Rating required</string>
    <string name="rating_label_text">Rating : %s/10</string>
    <string name="favourite_movie_text">Favourite</string>
    <string name="not_favourite_movie_text">Not Favourite</string>
    <string name="search_movies_text">Search here to get details about your saved movies</string>
    <string name="search_bar_hint">Enter keyword</string>
    <string name="lookup_btn_text">Lookup</string>
    <string name="no_matching_results_message">No matching results</string>
    <string name="ratings_text">Select the movie you want to find details in IMDb</string>
    <string name="find_movie_in_imdb_btn_text">Find movie in IMDb</string>
    <string name="imdb_results_text">Here are the ratings of movies similar to the movie you selected</string>
    <string name="can_not_load_data_message">Error occurred! Can\'t load data</string>
    <string name="no_similar_movies_results_message">Can\'t find any similar movies</string>
    <string name="can_not_load_image_message">Error occurred! Can\'t load image</string>
</resources>