<?xml version="1.0" encoding="utf-8"?>  <!-- layout for SearchActivity -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/search_movies_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/search_bar_hint"
            app:boxBackgroundColor="@color/primaryTextColor"
            app:boxStrokeWidthFocused="3dp"
            app:endIconTint="#FF0000"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorMessage"
            app:errorTextColor="#FFA8A8"
            app:startIconDrawable="@drawable/ic_search"
            app:tint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:textColor="@color/primaryDarkColor" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/lookup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:onClick="getSearchResults"
            android:text="@string/lookup_btn_text" />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:divider="@color/primaryDarkColor"
            android:dividerHeight="0.5dp" />
    </LinearLayout>
</ScrollView>